--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsdom": "^13.0.0",
     "mongodb": "^3.1.10",
     "morgan": "~1.9.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "serve-favicon": "^2.5.0"
   }
 }
